# arrow-protocol

./: Cargo.toml  README.md
docs/: v2.md  v3.md
src/: lib.rs
src/msg/: codec.rs  mod.rs  stream.rs
src/msg/control/: ack.rs  connect.rs  data_ack.rs  hup.rs  mod.rs  redirect.rs  register.rs  scan_report.rs  status.rs  svc_table.rs  update.rs
src/utils/: mod.rs  net.rs
src/v2/: mod.rs
src/v2/msg/: codec.rs  mod.rs  stream.rs
src/v2/msg/control/: ack.rs  connect.rs  data_ack.rs  hup.rs  mod.rs  redirect.rs  register.rs  scan_report.rs  status.rs  svc_table.rs  update.rs
src/v2/utils/: mod.rs  net.rs
src/v3/: error.rs  mod.rs  utils.rs
src/v3/connection/: base.rs  mod.rs  ping.rs
src/v3/control/: context.rs  error.rs  internal.rs  mod.rs  msg.rs
src/v3/msg/: error.rs  hello.rs  json.rs  mod.rs  options.rs  ping.rs  raw.rs  redirect.rs
src/v3/service/: context.rs  error.rs  internal.rs  mod.rs  msg.rs
